packages/svelte/tests/validator/samples/invalid-node-placement-5/input.svelte
<div>
	<form>
		{#if foo}
			<form>
				<input />
			</form>
		{/if}
	</form>
</div>
