packages/svelte/tests/compiler-errors/samples/window-inside-block/main.svelte
{#if foo}
	<svelte:window/>
{/if}